# video2en

./: .gitignore  Cargo.toml  INSTALL.md  PROJECT_SUMMARY.md  README.md  TEST_TRANSLATION.md  TRANSLATION_USAGE.md  TXT2AUDIO_USAGE.md  test_demo.ps1  test_json_output.json
.cargo/: config.toml
src/: lib.rs  main.rs  youdao.rs  youdao_translate.rs
tts/: Dockerfile  readme.md  server.py
