[package]
name = "video2en"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust CLI tool for extracting English subtitles from video/audio files using Whisper"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
which = "6.0"
regex = "1.10"
lingua = { version = "1.3", features = ["english", "chinese"] }
tempfile = "3.8"
